--- a/publications.html
+++ b/publications.html
@@ -248,6 +248,16 @@
                   <h3 class="big">Digital communications</h3>
                   <hr>
                   <br>
+                  
+                  <p align="justify">
+   <b>Rodrigo Aldana-López</b>, Jose Valencia-Velasco, Omar Longoria-Gandara, Javier Vázquez-Castillo, Luis Pizano-Escalante,
+   “<b>Efficient optimal linear estimation for CPM: An information fusion approach</b>”.
+   <i>IEEE Internet of Things Journal</i>, 2023.<br>
+   [<a style="color:blue" href="publications/iot2023.txt">bibtex</a> |
+    <a style="color:blue" href="https://ieeexplore.ieee.org/document/10266844">publisher link</a>]
+</p>
+<br>
+                  
                   <p align="justify">Abisaí Ramírez-Pérez, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Jose M. Valencia-Velasco, Luis Pizano-Escalante, Ramon Parra-Michel, “<b>Modular Arithmetic CPM for SDR Platforms</b>”. <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, 2022.<br>[<a style="color:blue" href="publications/tcasii2022.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9684561">publisher link</a>]
                   </p>
                   <br>
