--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -137,6 +137,18 @@
                   </p>
 				  </li>
                   <br>
+                  
+                  <li>
+<p align="justify">
+<b>Rodrigo Aldana-López</b>, Jose Valencia-Velasco, Omar Longoria-Gandara, Javier Vázquez-Castillo, Luis Pizano-Escalante,
+“<b>Efficient optimal linear estimation for CPM: An information fusion approach</b>”.
+<i>IEEE Internet of Things Journal</i>, 2023.<br>
+[<a style="color:blue" href="publications/iot2023.txt">bibtex</a> |
+ <a style="color:blue" href="https://ieeexplore.ieee.org/document/10266844">publisher link</a>]
+</p>
+</li>
+<br>
+
 				  <li>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Latency vs precision: Stability preserving perception scheduling</b>”. <i>Automatica</i>, 2023.<br>
                      [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access)</a>]
