--- a/publications.html
+++ b/publications.html
@@ -250,6 +250,16 @@
                   <br>
                   
                   <p align="justify">
+<b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Jose Valencia-Velasco, Javier Vázquez-Castillo, Luis Pizano-Escalante,
+“<b>Orthogonal Space-Time Bluetooth System for IoT Communications</b>”.
+<i>IoT</i>, 2025.<br>
+[<a style="color:blue" href="publications/iot2025.txt">bibtex</a> |
+ <a style="color:blue" href="https://www.mdpi.com/2624-831X/7/1/2">publisher link</a>]
+</p>
+<br>
+
+                  
+                  <p align="justify">
    <b>Rodrigo Aldana-López</b>, Jose Valencia-Velasco, Omar Longoria-Gandara, Javier Vázquez-Castillo, Luis Pizano-Escalante,
    “<b>Efficient optimal linear estimation for CPM: An information fusion approach</b>”.
    <i>IEEE Internet of Things Journal</i>, 2023.<br>
