--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -98,6 +98,18 @@
 <br>
 
 <li>
+<p align="justify">
+<b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Jose Valencia-Velasco, Javier Vázquez-Castillo, Luis Pizano-Escalante,
+“<b>Orthogonal Space-Time Bluetooth System for IoT Communications</b>”.
+<i>IoT</i>, 2025.<br>
+[<a style="color:blue" href="publications/iot2025.txt">bibtex</a> |
+ <a style="color:blue" href="https://www.mdpi.com/2624-831X/7/1/2">publisher link</a>]
+</p>
+</li>
+<br>
+
+
+<li>
 <p align="justify"><b>Rodrigo Aldana-López</b>, M. Aranda, R. Aragüés, C. Sagüés, “<b>Homogeneous Observer-Based Affine Formation Tracking</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2025.<br>
    [<a style="color:blue" href="publications/ijrnc2025a.txt">bibtex</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/10.1002/rnc.70308">publisher link</a>]
 </p>
